changed integer id to string id for unit plan

--- a/farmer.yaml
+++ b/farmer.yaml
@@ -665,7 +665,7 @@ definitions:
   FarmerContact:
     type: object
     properties:
-      contact_name:
+      name:
         type: string
         format: string
       address:
